--- a/usb_to_com/usb_to_com.ioc
+++ b/usb_to_com/usb_to_com.ioc
@@ -38,57 +38,77 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PE7
-Mcu.Pin13=PE8
-Mcu.Pin14=PE9
-Mcu.Pin15=PE10
-Mcu.Pin16=PE11
-Mcu.Pin17=PE12
-Mcu.Pin18=PC6
-Mcu.Pin19=PC7
+Mcu.Pin10=PC2
+Mcu.Pin11=PC3
+Mcu.Pin12=PA2
+Mcu.Pin13=PA3
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PE7
+Mcu.Pin19=PE8
 Mcu.Pin2=PE4
-Mcu.Pin20=PC8
-Mcu.Pin21=PC9
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PA15
-Mcu.Pin29=PE0
+Mcu.Pin20=PE9
+Mcu.Pin21=PE10
+Mcu.Pin22=PE11
+Mcu.Pin23=PE12
+Mcu.Pin24=PE13
+Mcu.Pin25=PE14
+Mcu.Pin26=PE15
+Mcu.Pin27=PB10
+Mcu.Pin28=PC6
+Mcu.Pin29=PC7
 Mcu.Pin3=PE5
-Mcu.Pin30=PE1
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM1_VS_ControllerModeGated
-Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin35=VP_TIM2_VS_ControllerModeClock
-Mcu.Pin36=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin37=VP_TIM2_VS_no_output2
-Mcu.Pin38=VP_TIM3_VS_ControllerModeGated
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PC8
+Mcu.Pin31=PC9
+Mcu.Pin32=PA8
+Mcu.Pin33=PA9
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13
+Mcu.Pin37=PA14
+Mcu.Pin38=PA15
+Mcu.Pin39=PD3
 Mcu.Pin4=PE6
-Mcu.Pin40=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin41=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin42=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin43=VP_TIM4_VS_no_output1
-Mcu.Pin44=VP_TIM5_VS_ControllerModeClock
-Mcu.Pin45=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin46=VP_TIM5_VS_no_output1
-Mcu.Pin47=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM8_VS_ControllerModeGated
-Mcu.Pin49=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin5=PH0-OSC_IN
-Mcu.Pin50=VP_TIM8_VS_ClockSourceITR
-Mcu.Pin51=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin6=PH1-OSC_OUT
-Mcu.Pin7=PC0
-Mcu.Pin8=PC1
-Mcu.Pin9=PC2
-Mcu.PinsNb=52
+Mcu.Pin40=PD4
+Mcu.Pin41=PD5
+Mcu.Pin42=PD6
+Mcu.Pin43=PD7
+Mcu.Pin44=PB3
+Mcu.Pin45=PB4
+Mcu.Pin46=PB5
+Mcu.Pin47=PB8
+Mcu.Pin48=PB9
+Mcu.Pin49=PE0
+Mcu.Pin5=PC13-ANTI_TAMP
+Mcu.Pin50=PE1
+Mcu.Pin51=VP_SYS_VS_Systick
+Mcu.Pin52=VP_TIM1_VS_ControllerModeGated
+Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin55=VP_TIM2_VS_ControllerModeClock
+Mcu.Pin56=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin57=VP_TIM2_VS_no_output2
+Mcu.Pin58=VP_TIM3_VS_ControllerModeGated
+Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin60=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin61=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin62=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin63=VP_TIM4_VS_no_output1
+Mcu.Pin64=VP_TIM5_VS_ControllerModeClock
+Mcu.Pin65=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin66=VP_TIM5_VS_no_output1
+Mcu.Pin67=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin68=VP_TIM8_VS_ControllerModeGated
+Mcu.Pin69=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin7=PH1-OSC_OUT
+Mcu.Pin70=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin71=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin8=PC0
+Mcu.Pin9=PC1
+Mcu.PinsNb=72
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -137,6 +157,38 @@ PA9.GPIO_Label=DIR_TIM1
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=I7_RESTART
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=I8_VACUM1
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=I18_DU_PHONG6
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=O6_vacum2_nha
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=O7_Den_Xanh
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=O8_Den_Do
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=O9_Coi
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=O10_Duphong1
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_ModeDefaultEXTI
 PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PC0.Locked=true
@@ -145,10 +197,26 @@ PC1.GPIOParameters=GPIO_ModeDefaultEXTI
 PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PC1.Locked=true
 PC1.Signal=GPXTI1
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIO_Label=O18_Duphong9
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_ModeDefaultEXTI
 PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PC2.Locked=true
 PC2.Signal=GPXTI2
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=I4_E_stop
+PC3.Locked=true
+PC3.Signal=GPIO_Input
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=I5_STOP
+PC4.Locked=true
+PC4.Signal=GPIO_Input
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=I6_START
+PC5.Locked=true
+PC5.Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_PuPd
 PC6.GPIO_PuPd=GPIO_NOPULL
 PC6.Locked=true
@@ -168,41 +236,93 @@ PC9.GPIO_Label=DIR_TIM8
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PD3.GPIOParameters=GPIO_Label
+PD3.GPIO_Label=O1_xilanh1
+PD3.Locked=true
+PD3.Signal=GPIO_Output
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=O2_xilanh2
+PD4.Locked=true
+PD4.Signal=GPIO_Output
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=O3_vacum_hut1
+PD5.Locked=true
+PD5.Signal=GPIO_Output
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=O4_vacum_hut2
+PD6.Locked=true
+PD6.Signal=GPIO_Output
+PD7.GPIOParameters=GPIO_Label
+PD7.GPIO_Label=O5_vacum1_nha
+PD7.Locked=true
+PD7.Signal=GPIO_Output
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=O11_Duphong2
 PE0.Locked=true
 PE0.Signal=GPIO_Output
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=O12_Duphong3
 PE1.Locked=true
 PE1.Signal=GPIO_Output
-PE10.GPIOParameters=GPIO_PuPd
+PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE10.GPIO_Label=I12_AP_SUAT
 PE10.GPIO_PuPd=GPIO_NOPULL
 PE10.Locked=true
 PE10.Signal=GPIO_Input
-PE11.GPIOParameters=GPIO_PuPd
+PE11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE11.GPIO_Label=I13_DU_PHONG
 PE11.GPIO_PuPd=GPIO_NOPULL
 PE11.Locked=true
 PE11.Signal=GPIO_Input
-PE12.GPIOParameters=GPIO_PuPd
+PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE12.GPIO_Label=I14_DU_PHONG2
 PE12.GPIO_PuPd=GPIO_NOPULL
 PE12.Locked=true
 PE12.Signal=GPIO_Input
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=I15_DU_PHONG3
+PE13.Locked=true
+PE13.Signal=GPIO_Input
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=I16_DU_PHONG4
+PE14.Locked=true
+PE14.Signal=GPIO_Input
+PE15.GPIOParameters=GPIO_Label
+PE15.GPIO_Label=I17_DU_PHONG5
+PE15.Locked=true
+PE15.Signal=GPIO_Input
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=O13_Duphong4
 PE2.Locked=true
 PE2.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=O14_Duphong5
 PE3.Locked=true
 PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=O15_Duphong6
 PE4.Locked=true
 PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=O16_Duphong7
 PE5.Locked=true
 PE5.Signal=GPIO_Output
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=O17_Duphong8
 PE6.Locked=true
 PE6.Signal=GPIO_Output
-PE7.GPIOParameters=GPIO_PuPd
+PE7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE7.GPIO_Label=I9_VACUM2
 PE7.GPIO_PuPd=GPIO_NOPULL
 PE7.Locked=true
 PE7.Signal=GPIO_Input
-PE8.GPIOParameters=GPIO_PuPd
+PE8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE8.GPIO_Label=I_10Left_DOOR
 PE8.GPIO_PuPd=GPIO_NOPULL
 PE8.Locked=true
 PE8.Signal=GPIO_Input
-PE9.GPIOParameters=GPIO_PuPd
+PE9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE9.GPIO_Label=I_11_RIGHT_DOOR
 PE9.GPIO_PuPd=GPIO_NOPULL
 PE9.Locked=true
 PE9.Signal=GPIO_Input
