--- a/usb_to_com/usb_to_com.ioc
+++ b/usb_to_com/usb_to_com.ioc
@@ -56,7 +56,7 @@ Mcu.Pin23=PE12
 Mcu.Pin24=PE13
 Mcu.Pin25=PE14
 Mcu.Pin26=PE15
-Mcu.Pin27=PB10
+Mcu.Pin27=PB12
 Mcu.Pin28=PC6
 Mcu.Pin29=PC7
 Mcu.Pin3=PE5
@@ -165,29 +165,37 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=I8_VACUM1
 PB1.Locked=true
 PB1.Signal=GPIO_Input
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=I18_DU_PHONG6
-PB10.Locked=true
-PB10.Signal=GPIO_Input
-PB3.GPIOParameters=GPIO_Label
+PB12.Locked=true
+PB12.Signal=GPIO_Input
+PB3.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB3.GPIO_Label=O6_vacum2_nha
+PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.Locked=true
+PB3.PinState=GPIO_PIN_SET
 PB3.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Label
+PB4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB4.GPIO_Label=O7_Den_Xanh
+PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
+PB4.PinState=GPIO_PIN_SET
 PB4.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=O8_Den_Do
+PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
+PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
-PB8.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=O9_Coi
+PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
+PB8.PinState=GPIO_PIN_SET
 PB8.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_Label
+PB9.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB9.GPIO_Label=O10_Duphong1
+PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_ModeDefaultEXTI
 PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
@@ -197,9 +205,11 @@ PC1.GPIOParameters=GPIO_ModeDefaultEXTI
 PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PC1.Locked=true
 PC1.Signal=GPXTI1
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=O18_Duphong9
+PC13-ANTI_TAMP.GPIO_PuPd=GPIO_PULLUP
 PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.PinState=GPIO_PIN_SET
 PC13-ANTI_TAMP.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_ModeDefaultEXTI
 PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
@@ -236,33 +246,47 @@ PC9.GPIO_Label=DIR_TIM8
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC9.Locked=true
 PC9.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_Label
+PD3.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PD3.GPIO_Label=O1_xilanh1
+PD3.GPIO_PuPd=GPIO_PULLUP
 PD3.Locked=true
+PD3.PinState=GPIO_PIN_SET
 PD3.Signal=GPIO_Output
-PD4.GPIOParameters=GPIO_Label
+PD4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PD4.GPIO_Label=O2_xilanh2
+PD4.GPIO_PuPd=GPIO_PULLUP
 PD4.Locked=true
+PD4.PinState=GPIO_PIN_SET
 PD4.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_Label
+PD5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PD5.GPIO_Label=O3_vacum_hut1
+PD5.GPIO_PuPd=GPIO_PULLUP
 PD5.Locked=true
+PD5.PinState=GPIO_PIN_SET
 PD5.Signal=GPIO_Output
-PD6.GPIOParameters=GPIO_Label
+PD6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PD6.GPIO_Label=O4_vacum_hut2
+PD6.GPIO_PuPd=GPIO_PULLUP
 PD6.Locked=true
+PD6.PinState=GPIO_PIN_SET
 PD6.Signal=GPIO_Output
-PD7.GPIOParameters=GPIO_Label
+PD7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PD7.GPIO_Label=O5_vacum1_nha
+PD7.GPIO_PuPd=GPIO_PULLUP
 PD7.Locked=true
+PD7.PinState=GPIO_PIN_SET
 PD7.Signal=GPIO_Output
-PE0.GPIOParameters=GPIO_Label
+PE0.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE0.GPIO_Label=O11_Duphong2
+PE0.GPIO_PuPd=GPIO_PULLUP
 PE0.Locked=true
+PE0.PinState=GPIO_PIN_SET
 PE0.Signal=GPIO_Output
-PE1.GPIOParameters=GPIO_Label
+PE1.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE1.GPIO_Label=O12_Duphong3
+PE1.GPIO_PuPd=GPIO_PULLUP
 PE1.Locked=true
+PE1.PinState=GPIO_PIN_SET
 PE1.Signal=GPIO_Output
 PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE10.GPIO_Label=I12_AP_SUAT
@@ -291,25 +315,35 @@ PE15.GPIOParameters=GPIO_Label
 PE15.GPIO_Label=I17_DU_PHONG5
 PE15.Locked=true
 PE15.Signal=GPIO_Input
-PE2.GPIOParameters=GPIO_Label
+PE2.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE2.GPIO_Label=O13_Duphong4
+PE2.GPIO_PuPd=GPIO_PULLUP
 PE2.Locked=true
+PE2.PinState=GPIO_PIN_SET
 PE2.Signal=GPIO_Output
-PE3.GPIOParameters=GPIO_Label
+PE3.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=O14_Duphong5
+PE3.GPIO_PuPd=GPIO_PULLUP
 PE3.Locked=true
+PE3.PinState=GPIO_PIN_SET
 PE3.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_Label
+PE4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=O15_Duphong6
+PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
+PE4.PinState=GPIO_PIN_SET
 PE4.Signal=GPIO_Output
-PE5.GPIOParameters=GPIO_Label
+PE5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE5.GPIO_Label=O16_Duphong7
+PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
+PE5.PinState=GPIO_PIN_SET
 PE5.Signal=GPIO_Output
-PE6.GPIOParameters=GPIO_Label
+PE6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE6.GPIO_Label=O17_Duphong8
+PE6.GPIO_PuPd=GPIO_PULLUP
 PE6.Locked=true
+PE6.PinState=GPIO_PIN_SET
 PE6.Signal=GPIO_Output
 PE7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE7.GPIO_Label=I9_VACUM2
@@ -422,7 +456,7 @@ TIM2.IPParameters=Period,AutoReloadPreload,Prescaler,TIM_MasterSlaveMode,TIM_Mas
 TIM2.OCPolarity_2=TIM_OCPOLARITY_HIGH
 TIM2.Period=999
 TIM2.Prescaler=0
-TIM2.Pulse-PWM\ Generation2\ No\ Output=999
+TIM2.Pulse-PWM\ Generation2\ No\ Output=0
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_OC2REF
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -439,7 +473,7 @@ TIM4.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_Mas
 TIM4.OCPolarity_1=TIM_OCPOLARITY_HIGH
 TIM4.Period=999
 TIM4.Prescaler=0
-TIM4.Pulse-PWM\ Generation1\ No\ Output=999
+TIM4.Pulse-PWM\ Generation1\ No\ Output=0
 TIM4.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
 TIM4.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -447,7 +481,7 @@ TIM5.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM5.IPParameters=Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,OCPolarity_1,Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output
 TIM5.OCPolarity_1=TIM_OCPOLARITY_HIGH
 TIM5.Period=999
-TIM5.Pulse-PWM\ Generation1\ No\ Output=999
+TIM5.Pulse-PWM\ Generation1\ No\ Output=0
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
 TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
