--- a/usb_to_com/usb_to_com.ioc
+++ b/usb_to_com/usb_to_com.ioc
@@ -3,7 +3,8 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 Dma.Request0=USART2_RX
-Dma.RequestsNb=1
+Dma.Request1=USART3_RX
+Dma.RequestsNb=2
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Stream5
@@ -14,6 +15,16 @@ Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.1.Instance=DMA1_Stream1
+Dma.USART3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.1.Mode=DMA_NORMAL
+Dma.USART3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -23,8 +34,9 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP10=TIM8
 Mcu.IP11=USART2
-Mcu.IP12=USB_DEVICE
-Mcu.IP13=USB_OTG_FS
+Mcu.IP12=USART3
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
@@ -33,7 +45,7 @@ Mcu.IP6=TIM3
 Mcu.IP7=TIM4
 Mcu.IP8=TIM5
 Mcu.IP9=TIM7
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -56,65 +68,68 @@ Mcu.Pin23=PE12
 Mcu.Pin24=PE13
 Mcu.Pin25=PE14
 Mcu.Pin26=PE15
-Mcu.Pin27=PB12
-Mcu.Pin28=PC6
-Mcu.Pin29=PC7
+Mcu.Pin27=PB10
+Mcu.Pin28=PB11
+Mcu.Pin29=PB12
 Mcu.Pin3=PE5
-Mcu.Pin30=PC8
-Mcu.Pin31=PC9
-Mcu.Pin32=PA8
-Mcu.Pin33=PA9
-Mcu.Pin34=PA11
-Mcu.Pin35=PA12
-Mcu.Pin36=PA13
-Mcu.Pin37=PA14
-Mcu.Pin38=PA15
-Mcu.Pin39=PD3
+Mcu.Pin30=PC6
+Mcu.Pin31=PC7
+Mcu.Pin32=PC8
+Mcu.Pin33=PC9
+Mcu.Pin34=PA8
+Mcu.Pin35=PA9
+Mcu.Pin36=PA11
+Mcu.Pin37=PA12
+Mcu.Pin38=PA13
+Mcu.Pin39=PA14
 Mcu.Pin4=PE6
-Mcu.Pin40=PD4
-Mcu.Pin41=PD5
-Mcu.Pin42=PD6
-Mcu.Pin43=PD7
-Mcu.Pin44=PB3
-Mcu.Pin45=PB4
-Mcu.Pin46=PB5
-Mcu.Pin47=PB8
-Mcu.Pin48=PB9
-Mcu.Pin49=PE0
+Mcu.Pin40=PA15
+Mcu.Pin41=PD3
+Mcu.Pin42=PD4
+Mcu.Pin43=PD5
+Mcu.Pin44=PD6
+Mcu.Pin45=PD7
+Mcu.Pin46=PB3
+Mcu.Pin47=PB4
+Mcu.Pin48=PB5
+Mcu.Pin49=PB8
 Mcu.Pin5=PC13-ANTI_TAMP
-Mcu.Pin50=PE1
-Mcu.Pin51=VP_SYS_VS_Systick
-Mcu.Pin52=VP_TIM1_VS_ControllerModeGated
-Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin55=VP_TIM2_VS_ControllerModeClock
-Mcu.Pin56=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin57=VP_TIM2_VS_no_output2
-Mcu.Pin58=VP_TIM3_VS_ControllerModeGated
-Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin50=PB9
+Mcu.Pin51=PE0
+Mcu.Pin52=PE1
+Mcu.Pin53=VP_SYS_VS_Systick
+Mcu.Pin54=VP_TIM1_VS_ControllerModeGated
+Mcu.Pin55=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin57=VP_TIM2_VS_ControllerModeClock
+Mcu.Pin58=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin59=VP_TIM2_VS_no_output2
 Mcu.Pin6=PH0-OSC_IN
-Mcu.Pin60=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin61=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin62=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin63=VP_TIM4_VS_no_output1
-Mcu.Pin64=VP_TIM5_VS_ControllerModeClock
-Mcu.Pin65=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin66=VP_TIM5_VS_no_output1
-Mcu.Pin67=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin68=VP_TIM8_VS_ControllerModeGated
-Mcu.Pin69=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin60=VP_TIM3_VS_ControllerModeGated
+Mcu.Pin61=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin63=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin64=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin65=VP_TIM4_VS_no_output1
+Mcu.Pin66=VP_TIM5_VS_ControllerModeClock
+Mcu.Pin67=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin68=VP_TIM5_VS_no_output1
+Mcu.Pin69=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin7=PH1-OSC_OUT
-Mcu.Pin70=VP_TIM8_VS_ClockSourceITR
-Mcu.Pin71=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin70=VP_TIM8_VS_ControllerModeGated
+Mcu.Pin71=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin72=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin73=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=72
+Mcu.PinsNb=74
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -131,6 +146,7 @@ NVIC.SVCall_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM7_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -165,6 +181,10 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=I8_VACUM1
 PB1.Locked=true
 PB1.Signal=GPIO_Input
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB12.Locked=true
 PB12.Signal=GPIO_Input
 PB3.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
@@ -395,7 +415,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_USART2_UART_Init-USART2-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -499,6 +519,8 @@ TIM8.TIM_MasterOutputTrigger=TIM_TRGO_OC3REF
 TIM8.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
