--- a/usb_to_com/usb_to_com.ioc
+++ b/usb_to_com/usb_to_com.ioc
@@ -135,6 +135,7 @@ NVIC.DebugMonitor_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
@@ -235,10 +236,8 @@ PC2.GPIOParameters=GPIO_ModeDefaultEXTI
 PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PC2.Locked=true
 PC2.Signal=GPXTI2
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=I4_E_stop
 PC3.Locked=true
-PC3.Signal=GPIO_Input
+PC3.Signal=GPXTI3
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=I5_STOP
 PC4.Locked=true
@@ -455,6 +454,8 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
