k cập nhap được tọa đọ khi về home

--- a/usb_to_com/usb_to_com.ioc
+++ b/usb_to_com/usb_to_com.ioc
@@ -149,13 +149,14 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA8.GPIOParameters=GPIO_PuPd
+PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PA8.GPIO_PuPd=GPIO_NOPULL
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Speed,GPIO_Label
 PA9.GPIO_Label=DIR_TIM1
-PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
@@ -226,23 +227,25 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=I6_START
 PC5.Locked=true
 PC5.Signal=GPIO_Input
-PC6.GPIOParameters=GPIO_PuPd
+PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PC6.GPIO_PuPd=GPIO_NOPULL
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC6.Locked=true
 PC6.Signal=S_TIM3_CH1
 PC7.GPIOParameters=GPIO_Speed,GPIO_Label
 PC7.GPIO_Label=DIR_TIM3
-PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC7.Locked=true
 PC7.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_PuPd
+PC8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
 PC8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PC8.GPIO_PuPd=GPIO_NOPULL
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC8.Locked=true
 PC8.Signal=S_TIM8_CH3
 PC9.GPIOParameters=GPIO_Speed,GPIO_Label
 PC9.GPIO_Label=DIR_TIM8
-PC9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PD3.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
