--- a/usb_to_com/usb_to_com.ioc
+++ b/usb_to_com/usb_to_com.ioc
@@ -23,8 +23,6 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP10=TIM8
 Mcu.IP11=USART2
-Mcu.IP12=USB_DEVICE
-Mcu.IP13=USB_OTG_FS
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
@@ -33,7 +31,7 @@ Mcu.IP6=TIM3
 Mcu.IP7=TIM4
 Mcu.IP8=TIM5
 Mcu.IP9=TIM7
-Mcu.IPNb=14
+Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -64,51 +62,48 @@ Mcu.Pin30=PC8
 Mcu.Pin31=PC9
 Mcu.Pin32=PA8
 Mcu.Pin33=PA9
-Mcu.Pin34=PA11
-Mcu.Pin35=PA12
-Mcu.Pin36=PA13
-Mcu.Pin37=PA14
-Mcu.Pin38=PA15
-Mcu.Pin39=PD3
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PA15
+Mcu.Pin37=PD3
+Mcu.Pin38=PD4
+Mcu.Pin39=PD5
 Mcu.Pin4=PE6
-Mcu.Pin40=PD4
-Mcu.Pin41=PD5
-Mcu.Pin42=PD6
-Mcu.Pin43=PD7
-Mcu.Pin44=PB3
-Mcu.Pin45=PB4
-Mcu.Pin46=PB5
-Mcu.Pin47=PB8
-Mcu.Pin48=PB9
-Mcu.Pin49=PE0
+Mcu.Pin40=PD6
+Mcu.Pin41=PD7
+Mcu.Pin42=PB3
+Mcu.Pin43=PB4
+Mcu.Pin44=PB5
+Mcu.Pin45=PB8
+Mcu.Pin46=PB9
+Mcu.Pin47=PE0
+Mcu.Pin48=PE1
+Mcu.Pin49=VP_SYS_VS_Systick
 Mcu.Pin5=PC13-ANTI_TAMP
-Mcu.Pin50=PE1
-Mcu.Pin51=VP_SYS_VS_Systick
-Mcu.Pin52=VP_TIM1_VS_ControllerModeGated
-Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin55=VP_TIM2_VS_ControllerModeClock
-Mcu.Pin56=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin57=VP_TIM2_VS_no_output2
-Mcu.Pin58=VP_TIM3_VS_ControllerModeGated
-Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin50=VP_TIM1_VS_ControllerModeGated
+Mcu.Pin51=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin53=VP_TIM2_VS_ControllerModeClock
+Mcu.Pin54=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin55=VP_TIM2_VS_no_output2
+Mcu.Pin56=VP_TIM3_VS_ControllerModeGated
+Mcu.Pin57=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin59=VP_TIM4_VS_ControllerModeClock
 Mcu.Pin6=PH0-OSC_IN
-Mcu.Pin60=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin61=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin62=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin63=VP_TIM4_VS_no_output1
-Mcu.Pin64=VP_TIM5_VS_ControllerModeClock
-Mcu.Pin65=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin66=VP_TIM5_VS_no_output1
-Mcu.Pin67=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin68=VP_TIM8_VS_ControllerModeGated
-Mcu.Pin69=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin60=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin61=VP_TIM4_VS_no_output1
+Mcu.Pin62=VP_TIM5_VS_ControllerModeClock
+Mcu.Pin63=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin64=VP_TIM5_VS_no_output1
+Mcu.Pin65=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin66=VP_TIM8_VS_ControllerModeGated
+Mcu.Pin67=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin68=VP_TIM8_VS_ClockSourceITR
 Mcu.Pin7=PH1-OSC_OUT
-Mcu.Pin70=VP_TIM8_VS_ClockSourceITR
-Mcu.Pin71=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=72
+Mcu.PinsNb=69
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -125,7 +120,6 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
@@ -133,10 +127,6 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:false
-PA11.Mode=Device_Only
-PA11.Signal=USB_OTG_FS_DM
-PA12.Mode=Device_Only
-PA12.Signal=USB_OTG_FS_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -414,7 +404,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
@@ -423,6 +413,7 @@ RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=168000000
@@ -503,12 +494,6 @@ TIM8.TIM_MasterOutputTrigger=TIM_TRGO_OC3REF
 TIM8.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
-USB_DEVICE.VirtualMode-CDC_FS=Cdc
-USB_DEVICE.VirtualModeFS=Cdc_FS
-USB_OTG_FS.IPParameters=VirtualMode
-USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
@@ -549,7 +534,5 @@ VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM8_VS_ClockSourceITR.Signal=TIM8_VS_ClockSourceITR
 VP_TIM8_VS_ControllerModeGated.Mode=Gated Mode
 VP_TIM8_VS_ControllerModeGated.Signal=TIM8_VS_ControllerModeGated
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 isbadioc=false
